<resources>
    <string name="app_name">AppAcai</string>
    <string name="text_nome_field">Nome*</string>
    <string name="text_nomeEmpresa_field">Nome Fantasia*</string>
    <string name="text_email_field">Email*</string>
    <string name="text_pix_field">Chave pix*</string>
    <string name="text_confirmarSenha_field">Confirmar senha*</string>
    <string name="text_senha_field">Senha*</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="text_fazerLogin">Login</string>
    <string name="text_recuperarSenha">Esqueci a senha</string>
    <string name="text_manterConectado">Mantenha-me conectado</string>
    <string name="instrucao_recuperar_senha1">Insira o e-mail cadastrado para alterar a senha</string>
    <string name="text_continuar_rec">continuar</string>
    <string name="text_recuperarSenha2">Insira a nova senha</string>
    <string name="text_alterar_senha">Alterar Senha</string>
    <string name="text_page_admin">Admin</string>
    <string name="text_page_vendedores">Vendedores</string>
    <string name="text_page_home">Home</string>
    <string name="text_page_produtos">Produtos</string>
    <string name="text_page_vendas">Vendas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_dados_loja">Dados Loja</string>
    <string name="editar_dados">Editar</string>
    <string name="text_sair">Sair</string>
    <string name="text_dados_loja_editar">Dados Loja - Editar</string>
    <string name="text_salvar">Salvar</string>
    <string name="text_excluir">Excluir</string>
    <string name="text_digite_senha">Digite a senha para confirmar:</string>
    <string name="text_dialog_positive">Sim</string>
    <string name="text_dialog_cancelar">Cancelar</string>
    <string name="text_message_deleteAdmin">Excluir o Adminstrador/Loja irá deletar todos os dados. Continuar?</string>
    <string name="text_message_reset_values">Resetar os valores totais e valores arrecadados dos funcionarios permanentemente?</string>
    <string name="text_dados_loja_cadastrar">Cadastrar Administrador/Loja</string>
    <string name="text_dados_loja_recuperarSenha">Recuperar Senha</string>
    <string name="text_dados_loja_alterarSenha">Alterar Senha</string>
    <string name="pesquisar_dados">Pesquisar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="texto_excluir">Tem certeza que deseja excluir esta informação?</string>
    <string name="text_gerar_relatorio">Gerar relatorio</string>
    <string name="text_cadastrar_produto">Cadastrar Produto</string>
    <string name="text_descricao_field">Descrição*</string>
    <string name="text_valor_field">Valor*</string>
    <string name="text_insert_image">clique aqui para inserir uma imagem</string>
    <string name="text_tipo_produto">Tipo</string>
    <string name="text_editar_produto">Editar Produto</string>
    <string name="text_visualizar_produto">Visualizar Produto</string>
    <string name="text_pesquisar_hint">Pesquisar</string>
    <string name="Telefone">Telefone</string>
    <string name="Meta_Vendas">Meta de vendas</string>
    <string name="TotaL_Vendas">Total de Vendas</string>
    <string name="Nome_Funcionario">Nome</string>
    <string name="text_editar_funcionario">Editar Funcionario</string>
    <string name="cpf">CPF</string>
    <string name="text_visualizar_funcionario">Visualizar Funcionario</string>
    <string name="text_page_cad_vendedores">Cadastrar Funcionarios</string>
    <string name="text_vendedor">Vendedor</string>
    <string name="total_hoje_text">total de hoje: R$</string>
    <string name="text_insert_qr_image">clique aqui para inserir a chave pix via QR</string>
    <string name="sobre_app">Sobre o app</string>
    <string name="sobre_text"><br><b>Sobre:</b> Lamv Açaí app© todos os direitos reservados 2021 Versão: 1.0 compilacão. </br>
<br><b>Desenvolvedores:</b> Victor Duarte - Lucas Viana</br>
<br><b>Analista:</b> Alessandro Barbosa - Manoel Joacir.</br>
<br>Manaus - AM</br></string>
    <string name="label_valorArrecadado">Valor Arrecadado</string>
    <string name="label_progresso">Progresso da meta de vendas</string>
    <string name="btn_textNovoPedido">Novo Pedido</string>
    <string name="btn_textAvaliarPedido">Avaliar Produto</string>
    <string name="text_nota">Insira a sua nota aqui de 0 a 5</string>
    <string name="text_reset_caixa">Zerar caixa geral</string>
    <string name="text_dialog_reset">Atenção! Informações podem ser perdidas!</string>

    <string-array name="titles_tab">
        <item>Login</item>
        <item>Cadastrar</item>
    </string-array>
</resources>