<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarVisualizarFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarVisualizarFuncionario"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_editar_dados"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/text_visualizar_funcionario"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarVisualizarFuncionario"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadTextNome"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome_Funcionario" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadTextEmail"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email_field" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadTextTelefone"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telefone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadInputCPF"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CPF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadTextMetaVenda"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputMetaVendas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Meta_Vendas" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadTextTotalVendas"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputTotalVendas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TotaL_Vendas" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>