<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cadastro_produto.EditarProdutoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarEditarProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarEditarProduto"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/text_editar_produto"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarEditarProduto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageProdutoEdit"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                tools:srcCompat="@drawable/acai" />

            <TextView
                android:id="@+id/textCliqueInserirImagemEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/average_sans"
                android:textColor="@color/acai_color"
                android:text="@string/text_insert_image"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProdutoLayoutInputTextName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="286dp"
                android:layout_height="82dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNomeEditProduto"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/average_sans"
                    android:hint="@string/text_nome_field"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProdutoLayoutInputTextDescricao"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="286dp"
                android:layout_height="82dp"
                android:layout_marginBottom="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescricaoEditProduto"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/average_sans"
                    android:hint="@string/text_descricao_field"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/typesFilterContainerEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="286dp"
                android:layout_height="40dp"
                app:boxBackgroundColor="@color/white"
                android:background="@drawable/bg_drop_down"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/ic_chevron_right"
                app:endIconTint="@color/acai_color">

                <AutoCompleteTextView
                    android:id="@+id/typesFilterSpinnerEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:dropDownSelector="@drawable/bg_drop_down"
                    android:ellipsize="end"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:fontFamily="@font/average_sans"
                    android:singleLine="true"
                    android:text="@string/text_tipo_produto"
                    android:textAlignment="center"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProdutoLayoutInputTextValor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="284dp"
                android:layout_marginTop="15dp"
                android:layout_height="82dp"
                app:prefixText="R$ "
                android:gravity="center_vertical"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtValorEditProduto"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingTop="12dp"
                    android:hint="@string/text_valor_field"
                    android:fontFamily="@font/average_sans"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSalvarProduto"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="40dp"
                    android:height="60dp"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/text_salvar"
                    app:cornerRadius="100dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btExcluirProduto"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="40dp"
                    android:height="60dp"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/text_excluir"
                    app:cornerRadius="100dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>