<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.senha.RecuperarSenhaActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/instrucao_recuperar_senha1"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recUserLayoutInpTextEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="286dp"
            android:layout_height="82dp"
            android:layout_marginTop="28dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailecuperar"
                android:layout_width="286dp"
                android:layout_height="56dp"
                android:hint="@string/text_email_field"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btContinuar"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:layout_marginBottom="65dp"
            android:layout_marginStart="79dp"
            android:layout_marginEnd="79dp"
            android:height="60dp"
            android:text="@string/text_continuar_rec"
            android:textSize="16sp"
            app:cornerRadius="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>